# learning-to-cut

./: .gitignore  CODE_OF_CONDUCT.md  COPYRIGHT.md  LICENSE.md  README.md  collate_last_line.sh  create_datasets.py  cutting_plane_features.py  evaluation-seed-list.csv  evaluation_seeds.txt  part1-collect-data.sh  part2-create-datasets.sh  part3-build-model.sh  part4-evaluate-cut-selector.sh  record_evaluation_seeds.py  sparse_regression_lasso.R  sparse_regression_utilities.R  summarize_results.sh  targets.json  utilities.R
collect-data-deploy/test/collect-data/: CMakeLists.txt
data-problem-seed-lists/: test.txt  train.txt  valid.txt
instances/: orlib_10_0_1_w_1.lp  orlib_10_0_1_w_10.lp  orlib_10_0_1_w_11.lp  orlib_10_0_1_w_12.lp  orlib_10_0_1_w_13.lp  orlib_10_0_1_w_14.lp  orlib_10_0_1_w_15.lp  orlib_10_0_1_w_16.lp  orlib_10_0_1_w_17.lp  orlib_10_0_1_w_18.lp  orlib_10_0_1_w_19.lp  orlib_10_0_1_w_2.lp  orlib_10_0_1_w_20.lp  orlib_10_0_1_w_21.lp  orlib_10_0_1_w_22.lp  orlib_10_0_1_w_23.lp  orlib_10_0_1_w_24.lp  orlib_10_0_1_w_25.lp  orlib_10_0_1_w_26.lp  orlib_10_0_1_w_27.lp  orlib_10_0_1_w_28.lp  orlib_10_0_1_w_29.lp  orlib_10_0_1_w_3.lp  orlib_10_0_1_w_30.lp  orlib_10_0_1_w_31.lp  orlib_10_0_1_w_32.lp  orlib_10_0_1_w_33.lp  orlib_10_0_1_w_34.lp  orlib_10_0_1_w_35.lp  orlib_10_0_1_w_36.lp  orlib_10_0_1_w_37.lp  orlib_10_0_1_w_38.lp  orlib_10_0_1_w_39.lp  orlib_10_0_1_w_4.lp  orlib_10_0_1_w_40.lp  orlib_10_0_1_w_41.lp  orlib_10_0_1_w_42.lp  orlib_10_0_1_w_43.lp  orlib_10_0_1_w_44.lp  orlib_10_0_1_w_45.lp  (+10 more)
problem-lists/: all.txt  evaluation_instances_list.txt  test_instances_list.txt  (+2 more)
(+88 files in other folders)
